# amazon-freertos

cmake/vendors/cypress/CYW943907AEVAL1F/: CMakeLists.txt
cmake/vendors/nxp/lpc54018iotmodule/: CMakeLists.txt
demos/common/defender/: aws_iot_demo_defender.c
lib/defender/: aws_iot_defender_api.c
lib/include/: aws_iot_defender.h
lib/include/private/: aws_iot_defender_internal.h
lib/pkcs11/: aws_pkcs11.c
lib/pkcs11/mbedtls/: aws_pkcs11_mbedtls.c
lib/tls/: aws_tls.c
tests/common/ota/: aws_test_ota_pal.c
tests/common/pkcs11/: aws_test_pkcs11.c
tests/common/posix/: aws_test_posix_utils.c
